Bug 150496 - gtk3: Orca no longer announces Writer text
Summary: gtk3: Orca no longer announces Writer text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.5.0 target:7.4.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: a11y-Linux GTK3
  Show dependency treegraph
 
Reported: 2022-08-19 10:13 UTC by Michael Weghorn
Modified: 2022-08-22 05:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
test doc (10.30 KB, application/vnd.oasis.opendocument.text)
2022-08-19 10:13 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2022-08-19 10:13:51 UTC
Created attachment 181882 [details]
test doc

Steps to reproduce:

1) start Orca screen reader
2) open attached document in Writer (or use any other one)
3) move the cursor up and down between paragraphs using the keyboard

Actual result: Orca doesn't announce the text.

Expected result: Orca should announce the text.

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: e956091ad8ebfa77294e130bf2b5cf0200578fdb
CPU threads: 12; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2022-08-19 10:15:17 UTC
Regression, bibisected to:

commit f3b0a95f9c2f85604808c21485e46e43aebbbfed
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Mon Aug 15 13:14:08 2022 +0100

    fix "invalid class cast from 'OOoAtkObj' to 'GtkWidgetAccessible'"
    
    and similar
    
    Change-Id: I8a989465057a5b7810f6cedf370fc1cd77f5af0e
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138311
    Tested-by: Jenkins
    Reviewed-by: Caolán McNamara <caolanm@redhat.com>

Adding CC: to Caolán McNamara
Comment 2 Commit Notification 2022-08-19 18:38:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f0827c392641b45647241b3a22e24a95e2b595e3

Resolves: tdf#150496 we want the AtkObject get_parent function

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2022-08-19 18:41:04 UTC
that seems to work again in trunk, safer revert for 7-4 also in gerrit.
Comment 4 Commit Notification 2022-08-19 19:48:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/6462bd8bca3d7c89e1dbf7c97ca6dc9056472992

tdf#150496 Revert "fix "invalid class cast from 'OOoAtkObj' to 'GtkWidgetAccessible'""

It will be available in 7.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Weghorn 2022-08-22 05:57:22 UTC
Thanks! Fix verified with

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 1df81daa83a213086e4ca928834ae093a0f16f48
CPU threads: 12; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded