fix "invalid class cast from 'OOoAtkObj' to 'GtkWidgetAccessible'"

and similar

Change-Id: I8a989465057a5b7810f6cedf370fc1cd77f5af0e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138311
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit f3b0a95f9c2f85604808c21485e46e43aebbbfed)

Resolves: tdf#150496 we want the AtkObject get_parent function

GtkAccessible overrode it, but we expect the AtkObject implementation

Change-Id: I5064bc619b11052bd22f9c75043b3e42697ebfc1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138558
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit f0827c392641b45647241b3a22e24a95e2b595e3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142419
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>