vcl/unx/gtk3/a11y/atkwrapper.hxx
@@ -47,7 +47,8 @@ namespace com::sun::star::accessibility {
 
 struct AtkObjectWrapper
 {
-    AtkObject aParent;
+    GtkWidgetAccessible aParent;
+
     AtkObject* mpOrig;  //if we're a GtkDrawingArea acting as a custom LibreOffice widget, this is the toolkit default impl
     AtkObject* mpSysObjChild; //if we're a container for a sysobj, then this is the sysobj native gtk AtkObject
 
